--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "dls-app-seed": {
+    "comprodls-appseed": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -51,7 +51,7 @@
               ],
               "optimization": true,
               "outputHashing": "all",
-              "sourceMap": false,
+              "sourceMap": true ,
               "namedChunks": false,
               "extractLicenses": true,
               "vendorChunk": false,
@@ -74,19 +74,19 @@
         "serve": {
           "builder": "@angular-builders/custom-webpack:dev-server",
           "options": {
-            "browserTarget": "dls-app-seed:build",
+            "browserTarget": "comprodls-appseed:build",
             "port": 8080
           },
           "configurations": {
             "production": {
-              "browserTarget": "dls-app-seed:build:production"
+              "browserTarget": "comprodls-appseed:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "dls-app-seed:build"
+            "browserTarget": "comprodls-appseed:build"
           }
         },
         "test": {
@@ -126,16 +126,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "dls-app-seed:serve"
+            "devServerTarget": "comprodls-appseed:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "dls-app-seed:serve:production"
+              "devServerTarget": "comprodls-appseed:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "dls-app-seed"
+  "defaultProject": "comprodls-appseed"
 }
