--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dls-app-seed",
+  "name": "comprodls-appseed",
   "version": "0.0.0",
   "scripts": {
     "postinstall": "npm run build:prod",
@@ -28,6 +28,7 @@
     "@angular/router": "~11.2.7",
     "@sentry/angular": "^6.2.3",
     "@sentry/node": "^6.2.3",
+    "@sentry/webpack-plugin": "^1.14.2",
     "aws-sdk": "^2.874.0",
     "body-parser": "^1.19.0",
     "bootstrap": "5.0.0-beta3",
